[project]
name = "nlp-data-gen"
version = "0.1.0"
description = "NLP Data Generation and Evaluation Pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "vllm>=0.2.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
